--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,5 +14,18 @@ services:
     image: registry:2
     ports:
       - "5000:5000"
+    environment:
+      - REGISTRY_HTTP_HEADERS_X-Content-Type-Options=[nosniff]
     volumes:
       - "./config.yml:/etc/docker/registry/config.yml"
+    container_name: registry
+  registry-ui:
+    image: joxit/docker-registry-ui:static
+    restart: always
+    ports:
+      - "80:80"
+    environment:
+      - REGISTRY_TITLE=My Internal Docker Registry
+      - REGISTRY_URL=http://registry:5000
+      - DELETE_IMAGES=true
+    container_name: registry-ui
